--- a/linux/samba.html
+++ b/linux/samba.html
@@ -62,7 +62,7 @@
       <p>passdb backend = yes</p>
       <br>
       <p>#ファイル末尾に追加</p>
-      <p>[xxxx_share等]</p>
+      <p>[xxxx_share等ff]</p>
       <p>path = /home/xxxx/</p>
       <p>browseable = yes</p>
       <p>writable = yes</p>
